<resources>
    <string name="app_name">My Inventory</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="product_name">Product Name</string>
    <string name="barcode">Barcode</string>
    <string name="price_for_sale">Price for Sale</string>
    <string name="first_stock">First Stock</string>
    <string name="add">ADD</string>
    <string name="clear">CLEAR</string>
    <string name="in_stock">In Stock</string>
    <string name="in_stock_ddot">In Stock:</string>
    <string name="name_empty_error">Type in product name</string>
    <string name="barcode_empty_error">Type in barcode</string>
    <string name="price_empty_error">Type in price for sale</string>
    <string name="add_success">Product Added Successfully!</string>
    <string name="delete_product">Delete Product</string>
    <string name="add_stock">Add to Stock</string>
    <string name="remove_stock">Remove from Stock</string>
    <string name="msg_delete">Are you sure you want to delete this product from your inventory?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="barcode_repeated">This barcode exists!</string>
    <string name="select_image">Select the image for the product</string>
</resources>