<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddProduct">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="169dp"
        android:layout_height="171dp"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="40sp"
        android:src="@android:drawable/ic_menu_gallery"/>

    <EditText
        android:id="@+id/txtProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:ems="10"
        android:hint="@string/product_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtBarcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:ems="10"
        android:hint="@string/barcode"
        android:inputType="number" />

    <EditText
        android:id="@+id/txtPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:ems="10"
        android:hint="@string/price_for_sale"
        android:inputType="number" />

    <EditText
        android:id="@+id/txtFirstStock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:ems="10"
        android:hint="@string/first_stock"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="add"
            android:text="@string/add" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:onClick="clear"
            android:text="@string/clear"
            android:textColor="@color/pink" />
    </LinearLayout>

</LinearLayout>