<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProductDetail">

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menuFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="bottom|end"
        app:menu_colorNormal="@color/sky_blue"
        app:menu_colorPressed="@color/cerulean"
        fab:menu_animationDelayPerItem="50"
        fab:menu_buttonSpacing="0dp"
        fab:menu_colorRipple="#99FFFFFF"
        fab:menu_fab_size="normal"
        fab:menu_icon="@drawable/ic_more_vert"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_shadowColor="#66000000"
        fab:menu_shadowRadius="4dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="3dp"
        fab:menu_showShadow="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="delete"
            android:src="@android:drawable/ic_menu_delete"
            app:fab_colorNormal="@color/design_default_color_error"
            app:fab_label="@string/delete_product"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="removeFromStock"
            android:src="@drawable/ic_remove"
            app:fab_colorNormal="@color/sky_blue"
            app:fab_label="@string/remove_stock"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fabAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addToStock"
            android:src="@drawable/fab_add"
            app:fab_colorNormal="@color/sky_blue"
            app:fab_label="@string/add_stock"
            fab:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="169dp"
            android:layout_height="171dp"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="40sp"
            android:src="@android:drawable/ic_menu_gallery" />

        <TableLayout
            android:id="@+id/tblProductDetail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginBottom="20sp"
                android:gravity="center|center_horizontal">

                <TextView
                    android:id="@+id/lblBarcodeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/barcode"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblProductBCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="TextView"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginBottom="20sp"
                android:gravity="center|center_horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/price_for_sale"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblProductPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="TextView"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginBottom="20sp"
                android:gravity="center|center_horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/in_stock"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblProductStock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="TextView"
                    android:textSize="18sp" />

            </TableRow>
        </TableLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>